feat: Add Mastodon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,3 +31,4 @@
     <link href="{{ "/assets/styles.css" | relative_url }}" rel="stylesheet" type="text/css">
   </head>
   <body class="bg-white min-height-full" {% if site.style == 'dark' %}style="background-color: #2f363d !important"{% endif %}>
+    <a rel="me" href="https://mstdn.social/@skynewz"></a>
